New style: a little simpler and a little prettier.

--- a/ui/admin/edit-entry.html
+++ b/ui/admin/edit-entry.html
@@ -6,24 +6,11 @@
 
 {% block content %}
 
-<style>
-  form {
-    margin-top: 2em;
-  }
-  form label {
-    display: block;
-    margin-bottom: 1em;
-  }
-  form input[type="text"], form textarea {
-    width: 100ch;
-  }
-</style>
-
 <p>
   <a href="{{ url_for('admin') }}">&larr; Back to admin</a>
 </p>
 
-<form method="POST" action="{{ url_for('editEntry', entry.id ? { id: entry.id } : {}) }}">
+<form class="stacked" method="POST" action="{{ url_for('editEntry', entry.id ? { id: entry.id } : {}) }}">
   <label>
     Title
     <input type="text" name="title" value="{{ entry.title | e('html_attr') }}">
@@ -48,7 +35,9 @@
     <input type="checkbox" name="draft" value="1" {{ entry.draft ? 'checked' }}> draft
   </label>
 
-  <input type="submit" value="Save">
+  <button type="submit">
+    Save
+  </button>
 </form>
 
 {{ include('entry.twig') }}
