Used PHP_CodeSniffer to force compliance with PSR-12
Actually did the conversions by hand to avoid wonkiness. May still be some
wonkiness left, but this should be most of it

--- a/ui/photo/albums.html
+++ b/ui/photo/albums.html
@@ -109,7 +109,7 @@
 
     <ul class="image-gallery">
       {% for album in albums %}
-        {% set photo = album.cover_photo() %}
+        {% set photo = album.coverPhoto() %}
         <li>
           <figure>
             <a href="{{ url_for('photo-album', { album_name: album.name }) }}">
