rel="icon" is all we need

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -11,7 +11,7 @@
   </title>
   <link rel="author" href="{{ full_url_for('page', { path : '' }) }}" />
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
-  <link rel="shortcut icon" href="/common/fav.ico" />
+  <link rel="icon" href="/common/fav.ico" />
   <link rel="stylesheet" type="text/css" media="screen"
         href="/common/screen.css?{{ current_release() }}" />
   <link rel="stylesheet" type="text/css" media="screen"
