--- a/ui/admin/index.html
+++ b/ui/admin/index.html
@@ -60,7 +60,7 @@
 </style>
 <h2>Photos</h2>
 <form class="stacked" method="post" action="{{ url_for('updatePhoto') }}" enctype="multipart/form-data">
-  <label class="drop-container" id="drop-container">
+  <label class="block drop-container" id="drop-container">
     <span class="drop-title">Drop photo here</span>
     or
     <input type="file" id="images" name="file" accept="image/*" required>
