--- a/ui/layout.html
+++ b/ui/layout.html
@@ -59,7 +59,7 @@
   </div>
 
   <footer>
-    <p><a rel="copyright" href="https://creativecommons.org/publicdomain/zero/1.0/">Dedicated to the public domain</a> by <a class="h-card" href="{{ full_url_for('page', { path : '' }) }}">Jim Winstead Jr.</a></p>
+    <p><a rel="copyright" href="https://creativecommons.org/publicdomain/zero/1.0/">Dedicated to the public domain</a> by <a class="h-card" href="{{ full_url_for('page', { path : '' }) }}">Jim&nbsp;Winstead&nbsp;Jr.</a></p>
   </footer>
 
 </div>
