--- a/ui/entry.html
+++ b/ui/entry.html
@@ -72,7 +72,9 @@
     {% set spam = 0 %}
     {% for comment in entry.comments.where_lte('spam', spam).find_many() %}
       <div class="comment {{ comment.spam ? 'spam' }}" id="c{{ comment.id }}">
-        <p>{{ comment.comment | paragraphs | expand_psuedo_urls | raw }}</p>
+        <div class="p-content">
+          <p>{{ comment.comment | paragraphs | expand_psuedo_urls | raw }}</p>
+        </div>
         <div class="details">
           &raquo;
           {# XXX expose email to admin #}
