--- a/ui/layout.html
+++ b/ui/layout.html
@@ -18,6 +18,7 @@
         href="/common/sh_style.css" />
   {% block extra_head %}{% endblock %}
   <script type="text/javascript" src="/common/sh_main.min.js"></script>
+  <script type="text/javascript" src="/common/sh_lang/sh_c.min.js"></script>
   <script type="text/javascript" src="/common/sh_lang/sh_php.min.js"></script>
   <script type="text/javascript" src="/common/sh_lang/sh_python.min.js"></script>
   <script type="text/javascript" src="/common/sh_lang/sh_sh.min.js"></script>
