Allow pages to use Markdown, too

--- a/ui/page.html
+++ b/ui/page.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-  {{- page.content | raw -}}
+  {{- page.content | markdown_to_html | raw -}}
 {% endblock %}
