--- a/ui/entry.html
+++ b/ui/entry.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="article">
   <meta property="og:url" content="{{ entry.canonicalUrl() | e('html_attr') }}">
   <meta property="og:title" content="{{ entry.title | e('html_attr') }}">
-  {# <meta property="og:image" content=""> #}
+  <meta property="og:image" content="{{ entry.featuredImage | e('html_attr') }}">
   <meta property="article:author" content="Jim Winstead">
   <meta property="article:published_time"
         content="{{ entry.created_at | date('c') | e('html_attr') }}">
