Support dark color mode

--- a/ui/layout.html
+++ b/ui/layout.html
@@ -64,6 +64,21 @@
         </form>
       </search>
     {% endblock %}
+
+    <form id="dark-mode">
+        <label>
+            <input type="radio" name="color-scheme" value="light dark" checked>
+            Default
+        </label>
+        <label>
+            <input type="radio" name="color-scheme" value="light">
+            Light
+        </label>
+        <label>
+            <input type="radio" name="color-scheme" value="dark">
+            Dark
+        </label>
+    </form>
   </div>
 
   <footer>
