--- a/ui/layout.html
+++ b/ui/layout.html
@@ -17,15 +17,10 @@
   <link rel="stylesheet" type="text/css" media="screen"
         href="/common/sh_style.css" />
   {% block extra_head %}{% endblock %}
-  <script type="text/javascript" src="/common/sh_main.min.js"></script>
-  <script type="text/javascript" src="/common/sh_lang/sh_c.min.js"></script>
-  <script type="text/javascript" src="/common/sh_lang/sh_php.min.js"></script>
-  <script type="text/javascript" src="/common/sh_lang/sh_python.min.js"></script>
-  <script type="text/javascript" src="/common/sh_lang/sh_sh.min.js"></script>
-  <script type="text/javascript" src="/common/sh_lang/sh_sql.min.js"></script>
+  <script type="text/javascript" src="/common/sh_main.js"></script>
 </head>
 
-<body onload="sh_highlightDocument();">
+<body onload="sh_highlightDocument('/common/sh_lang/', '.min.js');">
 
 <ul class="visually-hidden">
   <li><a href="#sidebar">skip to sidebar</a></li>
