Tweak more templates so they work with Jinja/Flask

--- a/ui/entry.html
+++ b/ui/entry.html
@@ -3,7 +3,7 @@
 
 {% block title %}
   {{- entry.title -}}
-  {{- entry.title ? ' / ' -}}
+  {%- if entry.title %} / {% endif %}
   {{- entry.created_at | date('F j, Y g:ia') -}}
   @ trainedmonkey
 {% endblock %}
@@ -11,7 +11,7 @@
 {% block extra_head %}
   <link rel="webmention" href="/~webmention">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="{{ entry.canonicalUrl() | e('html_attr') }}">
+  <meta property="og:url" content="{{ entry.canonicalUrl | e('html_attr') }}">
   <meta property="og:title" content="{{ entry.title | e('html_attr') }}">
   <meta property="og:image" content="{{ entry.featuredImage | e('html_attr') }}">
   <meta property="article:author" content="Jim Winstead">
@@ -66,13 +66,13 @@
   {% if previous.id or next.id %}
     <div class="prevnext" style="text-align: center; border: none">
       {% if previous.id %}
-        <a href="{{ previous.canonicalUrl() }}">&laquo; {{ previous.title ? previous.title : blog.date_format(previous.created_at) }}</a>
+        <a href="{{ previous.canonicalUrl }}">&laquo; {% if previous.title %}{{ previous.title }}{% else %}{{ blog.date_format(previous.created_at) }}{% endif %}</a>
       {% endif %}
       {% if previous.id and next.id %}
         &bull;
       {% endif %}
       {% if next.id %}
-        <a href="{{ next.canonicalUrl() }}">{{ next.title ? next.title : blog.date_format(next.created_at) }} &raquo;</a>
+        <a href="{{ next.canonicalUrl }}">{% if next.title %}{{ next.title }}{% else %}{{ blog.date_format(next.created_at) }}{% endif %} &raquo;</a>
       {% endif %}
       <br clear="both">
     </div>
@@ -84,7 +84,7 @@
     {# XXX show spam to admin #}
     {% set spam = 0 %}
     {% for comment in entry.comments.where_lte('spam', spam).find_many() %}
-      <div class="comment {{ comment.spam ? 'spam' }}" id="c{{ comment.id }}">
+      <div class="comment {% if comment.spam %}spam{% endif %}" id="c{{ comment.id }}">
         <div class="p-content">
           {{ comment.comment | markdown_to_html | expand_psuedo_urls | raw }}
         </div>
@@ -93,7 +93,7 @@
           {# XXX expose email to admin #}
           {{ comment.name | escape }}
           {% if comment.url %}
-            <a rel="nofollow" href="{% if not (comment.url matches '/^https?:/') %}http://{% endif %}{{ comment.url }}">(link)</a>
+            <a rel="nofollow" href="{{ comment.externalUrl }}">(link)</a>
           {% endif %}
           &raquo;
           {# XXX admin link for delete/spam/ham #}
