--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
   {% if tag %}
     <link rel="alternate" type="application/atom+xml" title="atom feed for {{ tag | e('html_attr') }}" href="{{ full_url_for('tag_atom', { tag: tag }) }}" />
   {% else %}
-    <link rel="alternate" type="application/atom+xml" title="atom feed" href="{{ full_url_for('atom') }}" />
+    <link rel="alternate" type="application/atom+xml" title="atom feed" href="{{ full_url_for('blog.atom') }}" />
   {% endif %}
   <meta name="ICBM" content="34.0480,-118.2473" />
   <meta name="geo.position" content="34.0480;-118.2473" />
