Add a Twig Loader to be able to `{% include '@slug' %}` from our database

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,7 @@
   </h1>
 
   {% if not tag %}
-    {{ includeFragment('@hireMe').content | raw }}
+      {% include '@hireMe' %}
   {% endif %}
 
   {% include 'entries.twig' %}
